# forge-oss

./: .forge_env  .gitignore  Cargo.toml  forge-scripts.sh
crates/forge-fs/: Cargo.toml
crates/forge-fs/src/: errors.rs  file_read.rs  gitignore_walk.rs  hash.rs  lib.rs  path_sandbox.rs  repo_id.rs  tree_builder.rs
crates/forge-fs/tests/: scenario_build_a_tree_from_mixed_files_and_dirs.rs  scenario_de_duplicate_repeated_paths.rs  scenario_deep_nested_paths.rs  scenario_handle_nonexistent_file.rs  scenario_handle_permission_denied.rs  scenario_handle_unicode_and_spaces_in_paths.rs  scenario_idempotent_insertion_order.rs  scenario_preserve_directory_hierarchy_depth.rs  scenario_read_empty_file.rs  scenario_read_file_with_leading_trailing_whitespace.rs  scenario_read_file_with_unicode_characters.rs  scenario_read_large_file.rs  scenario_read_simple_file_contents.rs  scenario_root_only_files_no_dirs.rs  scenario_sort_dirs_first_then_alpha.rs  scenario_tolerate_leading_trailing_slashes.rs
crates/forge-fs/tests/common/: mod.rs
crates/forge-fs/tests/common/fixtures/: tiny.txt
crates/forge-fs/tests/common/fixtures/nested/: .gitignore
crates/forge-fs/tests/glue/: build_a_tree_from_mixed_files_and_dirs.rs  de_duplicate_repeated_paths.rs  deep_nested_paths.rs  handle_nonexistent_file.rs  handle_permission_denied.rs  handle_unicode_and_spaces_in_paths.rs  idempotent_insertion_order.rs  mod.rs  preserve_directory_hierarchy_depth.rs  read_empty_file.rs  read_file_with_leading_trailing_whitespace.rs  read_file_with_unicode_characters.rs  read_large_file.rs  read_simple_file_contents.rs  root_only_files_no_dirs.rs  sort_dirs_first_then_alpha.rs  tolerate_leading_trailing_slashes.rs
crates/forge-ide/: Cargo.toml
crates/forge-ide/src/: command.rs  main.rs  provider.rs  router.rs  schema.rs
crates/forge-proc/: Cargo.toml
crates/forge-proc/src/: args.rs  env.rs  expand.rs  lib.rs  templates.rs
crates/forge-template/: Cargo.toml  README.md
crates/forge-template/src/: cache.rs  engine.rs  errors.rs  filters.rs  helpers.rs  lib.rs  options.rs
crates/forge-template/src/cli/: args.rs  inspect_cmd.rs  mod.rs  render_cmd.rs  serve_cmd.rs
crates/forge-template/src/codegen/: expand.rs  flags.rs  macros.rs  mod.rs  render.rs  utils.rs
crates/forge-template/src/context/: codegen_ctx.rs  condition.rs  field_codegen.rs  helpers.rs  mod.rs  value.rs  values_template_expansion.rs
crates/forge-template/src/source/: file.rs  inline.rs  mod.rs  partials.rs
crates/forge-template/src/utils/: mod.rs
crates/forge-template/tests/: caching_determinism.rs  expand_tests.rs  missing_key_policy.rs  partials_override.rs  render_inline_ok.rs  whitespace_modes.rs
crates/forge-util/: Cargo.toml
crates/forge-util/src/: cli.rs  main.rs
crates/forge-util/src/scan_sources/: emit.rs  mod.rs  model.rs  walker.rs
crates/forge-util/src/utils/: env.rs  mod.rs
crates/forge-view-model/: Cargo.toml
crates/forge-view-model/src/: editor.rs  header.rs  lib.rs  mock.rs  protocol.rs  status.rs  terminal.rs  tree.rs  workbench.rs
crates/forge-web-ui/: Cargo.toml  Trunk.toml  index.html
crates/forge-web-ui-components/: Cargo.toml
crates/forge-web-ui-components/src/: lib.rs
crates/forge-web-ui-components/src/button/: mod.rs  model.rs
crates/forge-web-ui/src/: display.rs  dom.rs  globals.rs  http.rs  lib.rs  mock_display.rs  render.rs  style.rs  tree_state.rs  viewcore.rs  views.rs  vm.rs  ws.rs
crates/forge-web-ui/src/monaco/: editor.rs  loader.rs  mod.rs  value.rs
crates/forge-web-ui/src/render/: editor_mount.rs  layout.rs  mod.rs  util.rs
crates/forge-web-ui/src/render/interactions/: actions.rs  dom.rs  mod.rs  sidebar.rs  toolbar.rs
crates/forge-web-ui/src/styles/: base.rs  debug_helpers.rs  editor.rs  header_status.rs  mod.rs  sidebar.rs  subbar.rs  terminal.rs
crates/forge-web-ui/src/views/: editor.rs  header.rs  mod.rs  sidebar.rs  status.rs  terminal.rs  toolbar.rs
crates/forge-web-ui/src/ws/: connect.rs  handlers.rs  mod.rs  send.rs  status.rs  util.rs
crates/forge-workbenchd/: Cargo.toml
crates/forge-workbenchd/src/: config.rs  main.rs  middleware.rs
crates/forge-workbenchd/src/api/: health.rs  mod.rs  open.rs  save.rs  snapshot.rs  ws.rs
crates/forge-workbenchd/src/services/: fs_tree.rs  mod.rs
crates/forgery-codegen/: Cargo.toml
crates/forgery-codegen/src/: entry.rs  errors.rs  lib.rs
crates/forgery-codegen/src/io/: yaml.rs
crates/forgery-codegen/src/mustache/: mod.rs  render.rs
crates/forgery-codegen/src/pipeline/: expansion.rs  mod.rs  pre_render_pipeline.rs  pre_render_yaml_stage.rs
crates/forgery-codegen/src/util/: json.rs
crates/forgery-codegen/tests/: render_smoke.rs
resources/: forge_ide_tree_polish.yaml  forge_ide_workbench.yaml  tree_ui_polish_user_stories.yaml
resources/bdd/forge-fs/: file_read.yaml  tree_builder.yaml
resources/schemas/: entry.json
resources/templates/: css_from_tokens.mustache  design_tokens.yaml  entry-builder.mustache
scripts/: build.sh  build_server.sh  build_web_ui.sh  dev.sh  env.sh  gen_forge_modules.zsh  project_root.rs  project_root.sh  run_server.sh  run_web_ui.sh
scripts/cli/: add_mod_to_lib.zsh  add_workspace_member.zsh  build_view.zsh  create_bin.zsh  create_cargo_toml.zsh  create_crate.zsh  create_forge_test.zsh  create_lib.zsh  create_lib_mod_file.zsh  create_mod_dir.zsh  create_mod_file.zsh  create_test_mod_file.zsh  create_tests_mod.zsh  current_crate_view.zsh  current_view.zsh  find_repo_root.zsh  forge_build.zsh  forge_create.zsh  forge_create_forgery_macros.zsh  forge_log.zsh  forge_view.zsh  install_view.zsh  scaffold_bdd_from_yaml.zsh  scaffold_bdd_scenario.zsh  test_view.zsh  tree_view.zsh
templates/forge_ide/: command.mustache  command_ast.mustache  core.yaml  mod_root.mustache  provider.mustache  provider_ast.mustache  router.mustache  schema.mustache  schema_ast.mustache
templates/forge_ide/modules/: command.yaml  provider.yaml  router.yaml  schema.yaml
templates/ui_component/: context.yaml  mod.mustache
