[package]
name = "forge-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"       # gitignore-aware walking
thiserror = "1"      # simple error type
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"          # ephemeral dirs/files
assert_fs = "1"         # ergonomic fixture setup (optional but nice)
predicates = "3"        # extra assertions (optional)
pretty_assertions = "1" # prettier diffs (optional)
