[package]
name = "forge-template"
version = "0.1.0"
edition = "2021"
description = "A simple mustache-based template rendering crate for Forge projects"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mustache = "0.9"          # stable rust-mustache crate
thiserror = "2.0.16"           # for nice error enums
once_cell = "1"
regex = "1.11.1"
anyhow = "1.0.99"
serde_yaml = "0.9.34+deprecated"           # if you want caching/static handles

[dev-dependencies]
tempfile = "3"       # used in render_file_ok.rs
