[package]
name = "forge-template"
version = "0.1.0"
edition = "2021"
description = "A simple mustache-based template rendering crate and CLI for Forge projects"

[lib]
path = "src/lib.rs"

# ======================================================
# Binary target (forge-template CLI)
# ======================================================
[[bin]]
name = "forge-template"
path = "src/bin/forge-template.rs"

# ======================================================
# Dependencies
# ======================================================
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"               # removed '+deprecated' metadata suffix
mustache = "0.9"
thiserror = "2.0.16"
once_cell = "1"
regex = "1.11.1"
anyhow = "1.0.99"

# Command-line and runtime layers
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# Optional future service layer (you can uncomment when ready)
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }

# ======================================================
# Dev Dependencies
# ======================================================
[dev-dependencies]
tempfile = "3"
