[package]
name = "forge-web-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDocument",
    "HtmlHeadElement",
    "Node",
    "Text",
    "console"
] }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
once_cell = "1"

[features]
default = []
dev = ["console_error_panic_hook"]
