[package]
name = "forge-web-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # required for wasm

[dependencies]
# --- WASM + Web bindings ---
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# js-sys for Array/Function/Object/Promise/Reflect
js-sys = "0.3"

# web-sys with all DOM features we actually use
web-sys = { version = "0.3", features = [
    # Core DOM
    "Window",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlDocument",
    "HtmlHeadElement",
    "Node",
    "Text",
    "console",

    # Style API (for element.style())
    "CssStyleDeclaration",

    # Storage / Location
    "Storage",
    "Location",

    # Fetch + HTTP
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",

    # WebSocket + events
    "WebSocket",
    "MessageEvent",
    "Event"
] }

# --- Dev-only panic hook (enable via feature 'dev') ---
console_error_panic_hook = { version = "0.1", optional = true }

# --- Shared view model (non-wasm crate) ---
forge-view-model = { path = "../forge-view-model" }

# --- Serialization / utilities ---
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
once_cell = "1"

[features]
default = []
dev = ["console_error_panic_hook"]
