[package]
name = "forgery-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Keep YAML optional; you can disable it for super-minimal builds.
default = ["yaml"]
yaml = ["dep:serde_yaml"]

[dependencies]
anyhow = { workspace = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
mustache = "0.9"
